fix: Update comments. Set overflow of info content.

--- a/src/css/style-big.css
+++ b/src/css/style-big.css
@@ -15,6 +15,7 @@ blockquote {
 }
 
 .info-window-content {
+  overflow: auto;
   width: 300px;
 }
 
