--- a/src/css/style-small.css
+++ b/src/css/style-small.css
@@ -18,6 +18,7 @@ blockquote {
 }
 
 .info-window-content {
+  overflow: auto;
   width: 300px;
 }
 
